--- a/task1/style.css
+++ b/task1/style.css
@@ -73,6 +73,13 @@ footer {
   }
 
   .step-box {
-    width: 100%;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+  }
+
+  .step-box:last-child {
+    margin-right: auto;
   }
 }
